Update title page

--- a/test/index.html
+++ b/test/index.html
@@ -74,7 +74,7 @@
     </head>
     <body>
         <div id="wrapper" class="wrapper-scroll">
-            <h1>Horwhell</h1>
+            <h1>Horwheel Component</h1>
             <div class="content">
                 <div class="section">
                     <div class="article"></div>
