Update horwheel function and remove older browser support.

--- a/test/index.html
+++ b/test/index.html
@@ -16,24 +16,17 @@
         -webkit-overflow-scrolling: touch;
         overflow-scrolling: touch;
         overflow: auto;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
       }
 
       .content {
-        width: 3862px;
         width: -moz-max-content;
         width: -webkit-max-content;
-        width: -o-max-content;
         width: -ms-max-content;
         width: max-content;
       }
 
       h1 {
-        font-family: 'Segoe UI Light', 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 2em;
         margin: .3em 0;
       }
